--- a/notebooks/1.0-eam-intro-data-exploration.ipynb
+++ b/notebooks/1.0-eam-intro-data-exploration.ipynb
@@ -720,7 +720,8 @@
     "\n",
     "ax.axhline(0, color='black', alpha=0.9) #horintal line\n",
     "ax.axvline(0, color='black', alpha=0.9) #horintal line\n",
-    "ax.grid()\n"
+    "ax.grid()\n",
+    "# the grid() method will give us a grid for our plot."
    ]
   }
  ],
