added comments about the end of that part

--- a/notebooks/1.0-eam-intro-data-exploration.ipynb
+++ b/notebooks/1.0-eam-intro-data-exploration.ipynb
@@ -721,7 +721,8 @@
     "ax.axhline(0, color='black', alpha=0.9) #horintal line\n",
     "ax.axvline(0, color='black', alpha=0.9) #horintal line\n",
     "ax.grid()\n",
-    "# the grid() method will give us a grid for our plot."
+    "# the grid() method will give us a grid for our plot.\n",
+    "# this mark the end of that part "
    ]
   }
  ],
